# distill-score

./: .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  LICENSE  Makefile  README.md  action.yml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.github/workflows/: ci.yml  dashboard.yml  publish.yml
dashboard/: data.json  index.html
extension/: README.md  manifest.json  popup.html  popup.js
scripts/: generate_dashboard.py
src/distill/: __init__.py  __main__.py  cache.py  cli.py  confidence.py  content_type.py  evaluate.py  export.py  pipeline.py  profiles.py  scorer.py  server.py
src/distill/extractors/: __init__.py
src/distill/scorers/: __init__.py  argument.py  complexity.py  epistemic.py  originality.py  readability.py  source_authority.py  substance.py
tests/: perturbations.py  test_argument.py  test_cache.py  test_calibration_corpus.py  test_cli_smoke.py  test_compare.py  test_complexity.py  test_confidence.py  test_content_type.py  test_distill.py  test_evaluate.py  test_evaluation_end_to_end.py  test_explain.py  test_export.py  test_gate.py  test_originality.py  test_perturbations.py  test_score_stability.py  test_scorer_edge_cases.py  test_server.py  test_source_authority.py  test_watch.py
tests/corpus/: calibration_corpus.yaml  evaluation_corpus.yaml
tests/fixtures/: score_baselines.yaml
